[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/AsteroidSpawner.gd" type="Script" id=1]

[node name="AsteroidSpawner" type="Node2D"]

script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="SpawnSpeedup" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="timeout" from="SpawnSpeedup" to="." method="_on_SpawnSpeedup_timeout"]


